# Voting_App

./: .gitignore  CMakeLists.txt  README.md  dat.db
data/: fptp.txt  users.txt  votes.txt
src/core/: main.c
src/db/: candidates.c
src/extra/: createNeededDataFiles.c  createUserFiles.c  createVoteFile.c
src/include/: db.h  main.h  screens.h
src/screens/: commonDraw.c  fptpScreen.c  login.c  prScreen.c  showVotesScreen.c  welcomeScreen.c
